assets/style.css
/* ... */
#mobileView #description, #mobileView #schedule {
    min-height: 80vh;
}
#mobileView canvas {
    display: none;
}
#mobileView .skyline-component.animated {
    transition: none;
    transform: none;
}
#mobileView #scrollDown-container {
    display: none;
}
#mobileView #hero {
    height: 90vh;
    position: relative;
    display: block;
    padding-bottom: 120vh;
}
#mobileView #hero .inner {
    padding: 4rem;
    margin-top: 0 !important;

}
#mobileView #hero #keyLabel, #mobileView #hero #keyByline {
    max-width: 100%;
}
#mobileView #pre-description {
    margin-top: 0;
}
#mobileView #pre-description .overflowTriangle {
    top: calc(-30vh + 1px);
    height: 30vh;
    z-index: -1;
}
#mobileView #schedule h2 {
    margin-bottom: 3rem !important;
    padding: 0;
}
#mobileView h2 {
    font-size: 2.5rem;
    width: 100%;
}
#mobileView #schedule {
    min-height: 100vh;
}
#mobileView #schedule .calendar-obj .time,
#mobileView #schedule .calendar-obj .description {
    display: block;
    font-weight: normal;
    font-size:
}
#mobileView #schedule .calendar-obj .time {
    float: none;
}
#mobileView #sponsors .inner {
    padding: 8rem 0;
}
#reduced #schedule h2 {
    margin-left: 0;
}
#reduced .container.inner .right-body {
    margin-right: 10%;
}

.mobileOnly {
    display: none;
}
#mobileView .mobileOnly {
    display: block;
}
.mobileOnly.titleDivider {
    width: 100vw;
    height: 50vw;
    margin-bottom: -20vh;
    margin-top: -3rem;
    position: absolute;
    left: 0;
    overflow: hidden;
    pointer-events:none;
}
.mobileOnly.titleDivider .divider-top {
    position: absolute;
    top: 0;
    left: 20%;
    right: 10%;
    height: 3px;
    background-color: var(--pinnacle-bg);
}
.mobileOnly.titleDivider.divider-right .divider-edge {
    position: absolute;
    top: 0;
    left: 60%;
    right: -20%;
    height: 3px;
    background-color: var(--pinnacle-bg);
    transform: rotate(45deg);
}
.mobileOnly.titleDivider.divider-left .divider-top {
    right: 30%;
    left: 10%;
}
.mobileOnly.titleDivider.divider-left .divider-edge {
    position: absolute;
    top: 0;
    right: 60%;
    left: -20%;
    height: 3px;
    background-color: var(--pinnacle-bg);
    transform: rotate(-45deg);
}
.mobileOnly.sideLines {
    position: absolute;
    top: 70vh;
    width: 10vw;
    height: 100vh;
    overflow: hidden;
    left: -20px;
    pointer-events:none;
}
.mobileOnly.sideLines div {
    width: 3px;
    background-color: var(--pinnacle-bg);
    position: absolute;
    z-index: 2;
    right: 0;
}
.mobileOnly.sideLines.sideLinesTop {
    z-index: -2;
}
.mobileOnly.sideLines.sideLinesTop div {
    background-color: var(--pinnacle-gold);
}

.mobileOnly.sideLines .line-in {
    top: -80%;
    bottom: 0%;
    transform: rotate(135deg);
}
.mobileOnly.sideLines .line-out {
    top: 0%;
    bottom: -80%;
    transform: rotate(45deg);
}

.mobileOnly.sideLines .line-side {
    top: 10%;
    bottom: 10%;
}
.ultrawide-capture {
    max-width: 1680px;
    margin-left: auto;
    margin-right: auto;
}

/* Timeline element (replaces Schedule) */
#timeline-container {
    font-size: 28px;
    font-weight: lighter;
    display: block;
    margin-left: auto;
    width: 100%;
    margin-top: 8%;
    padding: 0 10%;
}
.tl-ele {
    display: flex;
    width: 100%;
    margin: 6rem 0;
}
.tl-ele.timeline-right {
    justify-content: flex-end;
}
.tl-ele.timeline-left {

}
.timeline-desc {
    margin-left: 10%;
    color: var(--pinnacle-gold);
}
.timeline-date {
    font-weight: bold;
    min-width: 150px;
    width: 60%;
    text-align: left;
}
.timeline-end {
    margin-top: 8rem;
    display: block;
    text-align: center;
    font-size: 3rem;
    font-weight: bold;
    padding: 0 3rem;
}
.timeline-socials {
    text-align: center;
    display: block;
    font-size: 1.3rem;
    padding-bottom: 1rem;
}
.timeline-end.lead {
    font-size: 2rem;
    padding-bottom: 3rem;
    font-weight: normal;
}
.pinnacle-btn {
    display: inline-flex;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    justify-content: center;
    align-items: center;
    height: 4em;
    width: 40%;
}
.pinnacle-btn:focus, .pinnacle-btn:active {
    outline: none;
}
.pinnacle-btn .btn-label {
    font-size: 1.2rem;
    color: #F7F5E8;
    font-weight: bold;
    position: relative;
    z-index: 99;
    letter-spacing: 0.7px;
}
.pinnacle-btn .btn-label > svg {
    height: 0.7em;
    fill: #F7F5E8;
    stroke: #F7F5E8;
}
.pinnacle-btn > svg {
    position: absolute;
    top:0;
    left:0;
}
.pinnacle-btn > svg path {
    fill: #1B1B1B;
    stroke: #1B1B1B;
    transition: fill 0.3s ease, stroke 0.3s ease;
}
.pinnacle-btn.hover > svg path,
.pinnacle-btn:focus > svg path,
.pinnacle-btn:hover > svg path {
    fill: #C69E60;
    stroke: #947043;
}
.pinnacle-btn.hover,
.pinnacle-btn:focus,
.pinnacle-btn:hover {
    text-decoration: none;
    color: white;
}
.pinnacle-btn.hover .btn-label,
.pinnacle-btn:focus .btn-label,
.pinnacle-btn:hover .btn-label {
    transition: color 0.3s ease;
    color: var(--pinnacle-bg);
}

.pinnacle-btn.hover .btn-label,
.pinnacle-btn:focus .btn-label,
.pinnacle-btn:hover .btn-label {
    color: white;
}
#mobileView .tl-ele {
    flex-direction: column;
    text-align: right !important;
    margin: 3rem 0;
}
#mobileView .timeline-desc {
    margin-right: 0;
}

.card, .card-body, .card-footer {
    background: none;
    border: none;
}
.engagement-deck {
    margin-bottom: 3rem;
}
.engagement-deck .card {
    text-align: center;
}
.engagement-deck .card .card-body {
    padding-bottom: 0;
}
.engagement-deck .card p.card-text {
    font-size: 1.5rem !important;
}
.card.card-divider {
    flex: 0 0 3px;
    background-color: var(--pinnacle-gold);
    margin-top: 40px;
    margin-bottom: 40px;
}
#applybtn {
    min-width: 180px;
}
#updatedbtn {
    min-width: 180px;
}
.stacked-input {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}
/* ... */

